--- a/index.html
+++ b/index.html
@@ -1,77 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Recipe page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap"
+      rel="stylesheet"
+    />
 
-  Simple Omelette Recipe
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&family=Young+Serif&display=swap"
+      rel="stylesheet"
+    />
 
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/general.css" />
+    <link rel="stylesheet" href="./css/queries.css" />
+    <title>Frontend Mentor | Recipe page</title>
+  </head>
+  <body>
+    <main class="recipe">
+      <header>
+        <img
+          src="assets/images/image-omelette.jpeg"
+          alt="Photo of Omelette"
+          class="recipe-img"
+        />
+        <div class="header-text">
+          <h1 class="heading-primary mb-medium">Simple Omelette Recipe</h1>
+          <p class="paragraph">
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
+          </p>
+        </div>
+      </header>
 
-  Preparation time
+      <div class="container">
+        <section class="prep-time">
+          <h3 class="heading-tertiary mb-small">Preparation time</h3>
+          <ul class="prep-list">
+            <li class="prep-item">
+              <strong>Total: </strong>Approximately 10 minutes
+            </li>
+            <li class="prep-item"><strong>Preparation:</strong> 5 minutes</li>
+            <li class="prep-item"><strong>Cooking:</strong> 5 minutes</li>
+          </ul>
+        </section>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
+        <section class="ing">
+          <h2 class="heading-secondary mb-medium">Ingredients</h2>
+          <ul class="ing-list">
+            <li class="ing-item">2-3 large eggs</li>
+            <li class="ing-item">Salt, to taste</li>
+            <li class="ing-item">Pepper, to taste</li>
+            <li class="ing-item">1 tablespoon of butter or oil</li>
+            <li class="ing-item">
+              Optional fillings: cheese, diced vegetables, cooked meats, herbs
+            </li>
+          </ul>
+        </section>
 
-  Ingredients
+        <section class="step">
+          <h2 class="heading-secondary mb-medium">Instructions</h2>
+          <ol class="step-list">
+            <li class="step-item">
+              <strong>Beat the eggs: </strong>In a bowl, beat the eggs with a
+              pinch of salt and pepper until they are well mixed. You can add a
+              tablespoon of water or milk for a fluffier texture.
+            </li>
+            <li class="step-item">
+              <strong>Heat the pan: </strong>Place a non-stick frying pan over
+              medium heat and add butter or oil.
+            </li>
+            <li class="step-item">
+              <strong>Cook the omelette: </strong>Once the butter is melted and
+              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
+              coat the surface.
+            </li>
+            <li class="step-item">
+              <strong>Add fillings (optional): </strong>When the eggs begin to
+              set at the edges but are still slightly runny in the middle,
+              sprinkle your chosen fillings over one half of the omelette.
+            </li>
+            <li class="step-item">
+              <strong>Fold and serve: </strong>As the omelette continues to
+              cook, carefully lift one edge and fold it over the fillings. Let
+              it cook for another minute, then slide it onto a plate.
+            </li>
+            <li class="step-item">
+              <strong>Enjoy: </strong>Serve hot, with additional salt and pepper
+              if needed.
+            </li>
+          </ol>
+        </section>
 
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
+        <section class="nutrition">
+          <h2 class="heading-secondary mb-medium">Nutrition</h2>
+          <p class="paragraph mb-small">
+            The table below shows nutritional values per serving without the
+            additional fillings.
+          </p>
+          <div class="row">
+            <div>Calories</div>
+            <div class="value">277kcal</div>
+          </div>
+          <div class="row">
+            <div>Carbs</div>
+            <div class="value">0g</div>
+          </div>
+          <div class="row">
+            <div>Protein</div>
+            <div class="value">20g</div>
+          </div>
+          <div class="row">
+            <div>Fat</div>
+            <div class="value">22g</div>
+          </div>
+        </section>
+      </div>
+    </main>
 
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/JiaHe35354">Jia He</a>.
+    </footer>
+  </body>
 </html>
